syntax = "proto3";

package mcp.kgateway.dev.target.v1alpha1;

// import "google/protobuf/struct.proto";

message LocalDataSource {
  oneof source {
    string file_path = 1;
    bytes inline = 2;
  }
}

message Target {
  // The name of the target.
  string name = 1;

  oneof target {
    SseTarget sse = 2;
    OpenAPITarget openapi = 3;
    StdioTarget stdio = 4;
  }

  message SseTarget {
    // The host of the target.
    string host = 1;
    // The port of the target.
    uint32 port = 2;
    // The path of the target.
    string path = 3;
    // The headers of the target.
    map<string, string> headers = 4;
  }

  message StdioTarget {
    // The command of the target.
    string cmd = 1;
    // The arguments of the target.
    repeated string args = 2;
    // The environment variables of the target.
    map<string, string> env = 3;
  }

  message OpenAPITarget {
    // The host of the target.
    string host = 1;
    // The port of the target.
    uint32 port = 2;
    // The schema of the target.
    LocalDataSource schema = 3;
  }
}

